# takeclient

./: .gitignore  AI_AGENTS_ROADMAP.md  AI_AGENT_ROADMAP.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  GMB_AI_AGENT_ROADMAP.md  GOOGLE_ADS_SETUP.md  HETZNER_SETUP_COMPLETE.md  PROJECT_OVERVIEW.md  README.md  README_SAAS.md  ROADMAP.md  SINGLE_IP_ARCHITECTURE.md  SOCIAL_MEDIA_AI_AGENT_ROADMAP.md  SOCIAL_MEDIA_SETUP.md  WHATSAPP_SETUP_GUIDE.md  WORKFLOW_AUTOMATION.md  connect-to-server.sh  cookies.txt  deploy-to-server.sh  eslint.config.mjs  middleware.ts  package-lock.json  package.json  quick-start.sh  test_currency.py
app/: layout.tsx  page.tsx
app/admin/: layout.tsx  page.tsx
app/components/: StripeProvider.tsx  font-awesome.tsx
app/dashboard/: layout.tsx  page.tsx
app/lib/: audit-log.ts  audit.ts  auth.ts  landing-page-components.ts  permissions.ts  plan-limits.ts  plans.ts  session.ts  social-media-oauth.ts  stripe.ts  team-init.ts  team-permissions.ts  utils.ts  workflow-engine.ts  workflow-executor.ts  workflow-node-configs.tsx  workflow-templates.ts  workflow-triggers.ts
app/models/: form.ts
app/onboarding/: page.tsx
app/pricing/: page.tsx
app/super-admin/: page.tsx  (+1 more)
backend/: README.md  pyproject.toml  start_server.sh
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  api.py  google_ads.py  meta_ads.py
backend/app/api/v1/endpoints/: agents.py  auth.py  users.py
backend/app/core/: config.py
backend/app/services/: __init__.py  ai_agent_service.py  google_ads_service.py  google_ads_service.py.backup  meta_ads_service.py
deployment/: DNS_SETUP.md
docs/: TEAMS_AND_ROLES.md  WHATSAPP_INTEGRATION.md
prisma/: schema.prisma  seed.ts
scripts/: create-admin.ts  seed-demo-workflow.ts  seed-plans.ts  seed-sample-data.ts  seed-super-admin.ts  start_google_ads.sh  test-whatsapp.js  update-super-admin.js  update-super-admin.ts
types/: next-auth.d.ts
(+244 files in other folders)
