[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crm-backend"
version = "0.1.0"
description = "CRM Backend with AI Agents"
authors = [
    {name = "CRM Team", email = "team@crm.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.2",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    "celery>=5.3.4",
    "openai>=1.3.7",
    "langchain>=0.0.350",
    "langchain-openai>=0.0.2",
    "tiktoken>=0.5.2",
    "numpy>=1.24.3",
    "pandas>=2.1.4",
    "scikit-learn>=1.3.2",
    "streamlit>=1.28.2",
    "anthropic>=0.7.8",
    "pinecone-client>=2.2.4",
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
    "google-ads>=24.1.0",
    "google-auth>=2.23.4",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "protobuf>=4.25.0",
    "grpcio>=1.59.0",
    "facebook-business>=19.0.0",
    "requests>=2.31.0",
    "tensorflow>=2.15.0",
    "keras>=3.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
    "schedule>=1.2.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",
    "httpx>=0.25.2",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["app"] 